--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,16 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.ealoans.ealoans"
+        applicationId "com.moneyloans.makemoneyandloans"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 7
+        versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
